--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "nodemon": "^3.1.0",
+    "swagger-ui-express": "^5.0.0",
+    "yaml-lint": "^1.7.0",
+    "yamljs": "^0.3.0"
   }
 }
