--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
     "nodemon": "^3.1.0",
-    "swagger-ui-express": "^5.0.0",
     "yaml-lint": "^1.7.0",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
